--- a/javatalk/src/main/resources/templates/thymeleaf/login.html
+++ b/javatalk/src/main/resources/templates/thymeleaf/login.html
@@ -62,7 +62,7 @@ a{
 
 <form name="frm" method="post" action="">
 	<div class="d-flex justify-content-center" id="email">
-		<input class="form-control" type="text" placeholder="자바톡계정 (이메일)">
+		<input class="form-control" type="text" placeholder="아이디">
 	</div>
 	<div class="d-flex justify-content-center" id="pwd">
 		<input type="password" class="form-control" placeholder="비밀번호" id="inputPassword">
