--- a/javatalk/src/main/resources/templates/thymeleaf/chat.html
+++ b/javatalk/src/main/resources/templates/thymeleaf/chat.html
@@ -3,10 +3,34 @@
 <head>
 <meta charset="UTF-8">
 <title>main.html</title>
-<th:block th:include="thymeleaf/common/common_head"></th:block>
+<script src="https://kit.fontawesome.com/a7d69e61ec.js" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link th:href="@{/css/style.css}" rel="stylesheet">
+<script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript">
 	$(function(){
+		//상단 검색창
+		$('form[name=searchFrm]').hide();
+		$('.fa-magnifying-glass').click(function(){
+			$('form[name=searchFrm]').toggle();
+		});
+		$('.btn-close').click(function(){
+			$('form[name=searchFrm]').hide();
+		});
 		
+		//메뉴 버튼 활성화
+		$('.nav-list').eq('1').addClass('active');
+		
+		//알림
+		$('#bell-slash').hide();
+		$('#bell').click(function(){
+			$(this).toggle();
+			$('#bell-slash').toggle();
+		});
+		$('#bell-slash').click(function(){
+			$(this).toggle();
+			$('#bell').toggle();
+		});
 		
 	});
 </script>
@@ -14,43 +38,45 @@
 <body>
 <section>
 <!-- Left_Side -->
-	<div class="d-flex side-left justify-content-center p-2">
-		<div class="d-flex justify-content-center">
-			<ul style="padding-left: 0;">
-				<li class="list-group-item" style="padding: 20px 10px;"><a class="nav-list" th:href="@{/main}"><i class="fa-solid fa-user" style="font-size: 22px;"></i></a></li>
-				<li class="list-group-item" style="padding: 15px 10px;"><a class="nav-list active" href="#"><i class="fa-solid fa-comment" style="font-size: 22px;"></i></a></li>
-				<li class="list-group-item" style="padding: 15px 10px;"><a class="nav-list" href="#"><i class="fa-solid fa-ellipsis" style="font-size: 22px;"></i></a></li>
-			</ul>
-			<button type="button" class="btn btn-outline-light side-left-btn" style="bottom:70px"><i class="fa-solid fa-bell"></i></button>
-			<button type="button" class="btn btn-outline-light side-left-btn" style="bottom:30px"><i class="fa-solid fa-gear"></i></button>
-		</div>
-	</div>
+	<div th:replace="thymeleaf/fragments/left_nav.html :: left_side"></div>
 
 <!-- Right_Side -->
 	<div class="side-right" style="margin-left: 68px;">
 		<ul class="list-group list-group-flush">
-		  <li class="list-group-item list-item-top" style="padding-left: 20px;">
+		  <li class="list-group-item list-item-top" style="padding-left: 20px;position: static;">
 		  	채팅
-		  	<span style="float:right;">
+		  	<div style="float:right;">
 		  		<button type="button" class="btn btn-outline-light side-right-btn"><i class="fa-solid fa-magnifying-glass" style="font-size: 18px;"></i></button>
 			  	<button type="button" class="btn btn-outline-light side-right-btn"><i class="fa-solid fa-comments" style="font-size: 18px;"></i></button>
 			  	<button type="button" class="btn btn-outline-light side-right-btn"><i class="fa-solid fa-comment-medical" style="font-size: 18px;"></i></button>
-		  	</span>
+		  	</div>
+		  	<div>
+		  		<form name="searchFrm">
+		  			<i class="fa-solid fa-magnifying-glass search-icon"></i>
+			   		<input type="search" class="form-control search-input" placeholder="이름 검색" aria-label="Search">
+			   		<button type="button" class="btn-close" aria-label="Close"></button>
+			   </form>
+		  	</div>
 		  </li>
 		  
 		  <!-- chats -->
-		  <li class="list-group-item list-item-chat" style="padding: 10px 10px 8px 20px;">
+		  <!-- 반복 시작 -->
+		  <li class="list-group-item list-item-chat" style="padding: 10px 10px 8px 20px; position: static;">
 		  	<div style="margin-bottom: 5px;">
 		  		<div style="float: left;">
 		  			<button type="button" class="btn chat-icon-btn" disabled><i class="fa-solid fa-user" style="color: #e7e7e7bd"></i></button>
 		  		</div>
 		  		<div style="float: left;">
 		  			<p style="font-size: 12px; margin: 5px 0 2px 10px; font-weight: bold;">아빠</p>
-		  			<p style="font-size: 12px; margin: 2px 0 2px 10px;">안녕하세요</p>
+		  			<p style="font-size: 12px; margin: 2px 0 2px 10px; color: #2C3E50;">안녕하세요</p>
 		  		</div>
-		  		<p style="font-size: 12px; float: right; margin-top: 5px; margin-right: -3px;">어제</p>
+		  		<div style="float: right; margin-right: -3px; text-align: right;">
+			  		<p style="font-size: 11px; margin: 5px 0 0 10px; color: #b5b3b3;">어제</p>
+		  			<p class="badge rounded-pill text-bg-danger notice-badge" style="margin: 2px 0 2px 10px;">123</p>
+		  		</div>
 		  	</div>
 		  </li>
+		  <!-- 반복 종료 -->
 		</ul>
 	</div>
 </section>
