--- a/javatalk/src/main/resources/templates/thymeleaf/main.html
+++ b/javatalk/src/main/resources/templates/thymeleaf/main.html
@@ -3,9 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <title>main.html</title>
-<th:block th:include="thymeleaf/common/common_head"></th:block>
+<script src="https://kit.fontawesome.com/a7d69e61ec.js" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link th:href="@{/css/style.css}" rel="stylesheet">
+<script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
 <script type="text/javascript">
 	$(function(){
+		//친구 프로필
+		$('.friends-btn').click(function(){
+			open("/talk/profile?userId="+$(this).next().text(),"profile",
+			"width=300, height=500, location=yes, resizable=yes, top=200, left=500");
+		});
+		
+		//내 프로필
+		$('#myProfile').click(function(){
+			open("/talk/profile?userId=정진","profile",
+			"width=300, height=500, location=yes, resizable=yes, top=200, left=500");
+		});
+		
+		//모달
+		$('.fa-user-plus').click(function(){
+			$('#modal').modal('show');
+		});
+		
+		//상단 검색창
+		$('form[name=searchFrm]').hide();
+		$('.fa-magnifying-glass').click(function(){
+			$('form[name=searchFrm]').toggle();
+		});
+		$('.btn-close').click(function(){
+			$('form[name=searchFrm]').hide();
+		});
+		
+		//메뉴 버튼 활성화
+		$('.nav-list').eq('0').addClass('active');
+		
+		//알림
+		$('#bell-slash').hide();
+		$('#bell').click(function(){
+			$(this).toggle();
+			$('#bell-slash').toggle();
+		});
+		$('#bell-slash').click(function(){
+			$(this).toggle();
+			$('#bell').toggle();
+		});
+		
 		$('.fa-angle-down').hide();
 		//생일인 친구
 		var bool=false;
@@ -42,68 +85,112 @@
 <body>
 <section>
 <!-- Left_Side -->
-	<div class="d-flex side-left justify-content-center p-2">
-		<div class="d-flex justify-content-center">
-			<ul style="padding-left: 0;">
-				<li class="list-group-item" style="padding: 20px 10px;"><a class="nav-list active" href="#"><i class="fa-solid fa-user" style="font-size: 22px;"></i></a></li>
-				<li class="list-group-item" style="padding: 15px 10px;"><a class="nav-list" th:href="@{/chat}"><i class="fa-solid fa-comment" style="font-size: 22px;"></i></a></li>
-				<li class="list-group-item" style="padding: 15px 10px;"><a class="nav-list" href="#"><i class="fa-solid fa-ellipsis" style="font-size: 22px;"></i></a></li>
-			</ul>
-			<button type="button" class="btn btn-outline-light side-left-btn" style="bottom:70px"><i class="fa-solid fa-bell"></i></button>
-			<button type="button" class="btn btn-outline-light side-left-btn" style="bottom:30px"><i class="fa-solid fa-gear"></i></button>
-		</div>
-	</div>
+	<div th:replace="thymeleaf/fragments/left_nav.html :: left_side"></div>
 	
 <!-- Right_Side -->
 	<div class="side-right">
 		<ul class="list-group list-group-flush">
-		  <li class="list-group-item list-item-top">
+		  <li class="list-group-item list-item-top" style="margin-left: 15px;">
 		  	친구
-		  	<span style="float:right;">
+		  	<div style="float:right;">
 		  		<button type="button" class="btn btn-outline-light side-right-btn"><i class="fa-solid fa-magnifying-glass" style="font-size: 18px;"></i></button>
 			  	<button type="button" class="btn btn-outline-light side-right-btn"><i class="fa-solid fa-user-plus" style="font-size: 18px;"></i></button>
-		  	</span>
+		  	</div>
+		  	<div>
+		  		<form name="searchFrm">
+		  			<i class="fa-solid fa-magnifying-glass search-icon"></i>
+			   		<input type="search" class="form-control search-input" placeholder="이름 검색" aria-label="Search">
+			   		<button type="button" class="btn-close" aria-label="Close"></button>
+			   </form>
+		  	</div>
 		  </li>
 		  
 		  <!-- myProfile -->
-		  <li class="list-group-item" style="padding: 10px 5px; margin-right: 7px;">
-		  	<img th:src="@{/images/dog.jpg}" style="width: 55px; border-radius: 1.3rem;" alt="...">
+		  <li class="list-group-item" style="padding: 10px 5px; margin-right: 7px; margin-left: 13px;padding-left: 0;">
+		  	<a href="#" id="myProfile"><img th:src="@{/images/dog.jpg}" style="width: 55px; border-radius: 1.3rem;margin-left: 5px;" alt="..."></a>
 		  	<span style="margin-left: 7px; font-size: 13px;">정진</span>
 		  </li>
 		  
 		  <!-- birthDay -->
-		  <li class="list-group-item" style="padding: 3px 5px; margin-right: 7px;">
-		  	<div style="margin-bottom: 8px;">
+		  <li class="list-group-item" style="padding: 3px 5px; margin-right: 7px; margin-left: 13px;padding-left: 0;">
+		  	<div style="margin-bottom: 8px;margin-left: 5px;">
 		  		<span style="font-size: 11px; color: #b5b3b3;">생일인 친구</span>
 		  		<a href="#" style="float: right; color: #b5b3b3; padding-right: 2px;" id="birth-angle">
 		  			<i class="fa-solid fa-angle-up"></i>
 		  			<i class="fa-solid fa-angle-down"></i>
 		  		</a>
 		  	</div>
-		  	<div id="birth" style="margin-bottom: 5px;">
+		  	<div id="birth" style="margin-bottom: 5px;margin-left: 5px;">
 		  		<button type="button" class="btn cake-btn" disabled><i class="fa-solid fa-cake-candles" style="color: white;"></i></button>
 		  		<span style="font-size: 12px; margin-left: 3px;">친구의 생일을 확인해보세요!</span>
 		  	</div>
 		  </li>
 		  
-		  <!-- friends -->
-		  <li class="list-group-item" style="padding: 3px 5px; margin-right: 7px;">
-		  	<div style="margin-bottom: 8px;">
+		  <!-- friend_button -->
+		  <li class="list-group-item" style="padding: 3px 5px; margin-right: 7px; padding-left: 0;">
+		  	<div style="margin-bottom: 8px; padding-left: 18px;">
 		  		<span style="font-size: 11px; color: #b5b3b3;">친구</span>
 		  		<a href="#" style="float: right; color: #b5b3b3; padding-right: 2px;" id="friends-angle">
 		  			<i class="fa-solid fa-angle-up"></i>
 		  			<i class="fa-solid fa-angle-down"></i>
 		  		</a>
 		  	</div>
+		  	<!-- friends -->
 		  	<div id="friends" style="margin-bottom: 5px;">
-		  		<button type="button" class="btn friends-btn" disabled><i class="fa-solid fa-user" style="color: #e7e7e7bd"></i></button>
-		  		<span style="font-size: 12px; margin-left: 3px;">아빠</span>
+		  		<!-- 반복 시작 -->
+		  		<div class="friend-list" style="padding-left: 18px;">
+			  		<button type="button" class="btn friends-btn"><i class="fa-solid fa-user" style="color: #e7e7e7bd"></i></button>
+			  		<span style="font-size: 12px; margin-left: 3px;">아빠</span>
+		  		</div>
+		  		<!-- 반복 종료 -->
 		  	</div>
 		  </li>
 		  <!-- <li class="list-group-item">And a fifth one</li> -->
 		</ul>
 	</div>
 </section>
+
+<!-- modal -->
+<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-bs-backdrop="static">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header" style="border:0;color:#2C3E50;">
+        <h6 class="modal-title" id="exampleModalLabel">친구 추가</h6>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+	        <ul class="nav nav-tabs" id="myTab" role="tablist">
+			  <li class="nav-item" role="presentation">
+			    <button class="nav-link active modal-item" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">연락처로 추가</button>
+			  </li>
+			  <li class="nav-item" role="presentation">
+			    <button class="nav-link modal-item" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">아이디로 추가</button>
+			  </li>
+			</ul>
+			<div class="tab-content" id="myTabContent" style="margin-top: 20px;">
+			  <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+			  	<form name="addTel">
+			  		<input type="text" class="modal-input" placeholder="친구 이름">
+			  		<label class="tel">+82 &nbsp;|</label>
+			  		<input type="text" class="modal-input" placeholder="전화번호" style="padding-left: 50px;">
+			  		<p style="margin-top: 10px;">친구의 이름과 전화번호를 입력해주세요.</p>
+			  	</form>
+			  </div>
+			  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+			  	<form name="addId">
+			  		<input type="text" class="modal-input" placeholder="친구 자바톡 ID">
+			  		<p style="margin-top: 10px;">자바톡 ID를 등록하고 검색을 허용한 친구만</p>
+			  		<p>찾을 수 있습니다.</p>
+			  	</form>
+			  </div>
+			</div>
+      </div>
+      <div class="modal-footer" style="border:0;margin-top: 80px;">
+        <button type="button" class="btn btn-primary" disabled style="color:#2C3E50;background:#cccccc7a;border:0;font-size: 15px;">친구 추가</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
